--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Mail-QmailRemoteXS version 1.2
+Mail-QmailRemoteXS version 1.3
 =================
 
-Mail::QmailRemoteXS - Lightweight C-code (XS) SMTP send function based on Qmail's qmail-remote
+Mail::QmailRemoteXS - Lightweight (XS) SMTP send function based on Qmail's qmail-remote
 
 INSTALLATION
 
